--- a/LoCyanFrpDesktop/Properties/Resources.resx
+++ b/LoCyanFrpDesktop/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="BuildInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Utils\buildinfo.info;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Updater" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resource\net6.0\Updater.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
