Ver 2.2.0-Alpha.5: Add EasterEgg
 and Optimized Setting Page.

--- a/LoCyanFrpDesktop/Properties/Resources.resx
+++ b/LoCyanFrpDesktop/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="BSODTrigger" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resource\BSODTrigger.sys;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="BuildInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\buildinfo.info;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
